# clangmetatool

./: .dockerignore  .gitignore  .mariner.Dockerfile  .travis.Dockerfile  .travis.clang6.Dockerfile  .travis.clang7.Dockerfile  .travis.clang8.Dockerfile  .travis.clang9.Dockerfile  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_8md.html  CONTRIBUTING_8md_source.html  DCO_8md.html  DCO_8md_source.html  Dockerfile  Doxyfile  Jenkinsfile  README.md  README_8md.html  README_8md_source.html  annotated.html  classclangmetatool_1_1MetaTool-members.html  classclangmetatool_1_1MetaTool.html  classclangmetatool_1_1MetaToolFactory-members.html  classclangmetatool_1_1MetaToolFactory.html  classclangmetatool_1_1MetaToolFactory__coll__graph.md5  classclangmetatool_1_1MetaToolFactory__inherit__graph.map  classclangmetatool_1_1MetaToolFactory__inherit__graph.md5  classclangmetatool_1_1MetaTool__coll__graph.md5  classclangmetatool_1_1MetaTool__inherit__graph.map  classclangmetatool_1_1MetaTool__inherit__graph.md5  classclangmetatool_1_1collectors_1_1Definitions-members.html  classclangmetatool_1_1collectors_1_1Definitions.html  classclangmetatool_1_1collectors_1_1DefinitionsData-members.html  classclangmetatool_1_1collectors_1_1DefinitionsData.html  classclangmetatool_1_1collectors_1_1DefinitionsData__coll__graph.map  classclangmetatool_1_1collectors_1_1DefinitionsData__coll__graph.md5  classclangmetatool_1_1collectors_1_1FindCXXMemberCalls-members.html  classclangmetatool_1_1collectors_1_1FindCXXMemberCalls.html  (+254 more)
debian/: control  (+2 more)
examples/remove_ye_olde_feature_toggle/: CMakeLists.txt
examples/remove_ye_olde_feature_toggle/src/: main.cpp
examples/remove_ye_olde_feature_toggle/t/: CMakeLists.txt  integer_variable.c  integer_variable.c.expected  mixed_deterministic_and_not.c  mixed_deterministic_and_not.c.expected  non_deterministic.c.expected  simple_direct_usage.c  simple_direct_usage.c.expected  tool_test_runner.sh  true_vs_false.c  true_vs_false.c.expected
skeleton/: CMakeLists.txt
skeleton/src/: main.cpp
t/: 001-meta-tool.t.cpp  002-includegraph-just-includes.t.cpp  003-includegraph-function-ref.t.cpp  004-variablerefs-basic.t.cpp  005-membermethoddecls-basic.t.cpp  006-gather-non-const-values.t.cpp  007-definitions-two-funcs.t.cpp  007-defs-two-funcs.t.cpp  007-defs.t.cpp  007-find-calls.t.cpp  008-definitions-one-func-in-namespace.t.cpp  008-definitions-two-funcs.t.cpp  008-defs-one-func-in-namespace.t.cpp  009-definitions-one-func-in-namespace.t.cpp  009-definitions-two-class-defs-with-funcs.t.cpp  009-defs-two-class-defs-with-funcs.t.cpp  010-definitions-two-class-defs-with-funcs.t.cpp  011-definitions-templates.t.cpp  012-meta-tool-arbitrary-args.t.cpp  012-references-non-template.t.cpp  013-references-template.t.cpp  014-meta-tool-arbitrary-args.t.cpp  015-basic-cstring-propagation.t.cpp  016-branching-cstring-propagation.t.cpp  017-looping-cstring-propagation.t.cpp  018-multi-function-cstring-propagation.t.cpp  019-basic-integer-propagation.t.cpp  019-files.t.cpp  020-function-args-integer-propagation.t.cpp  021-branching-integer-propagation.t.cpp  022-looping-integer-propagation.t.cpp  023-multi-function-integer-propagation.t.cpp  024-find-cxx-member-calls.t.cpp  025-find-mixed-calls.t.cpp  026-macro-propagation.t.cpp  027-c-style-variadic-integer-propagation.t.cpp  028-diagnostic-during-postprocessing.t.cpp  029-tool-application-support.t.cpp  030-cstring-propagation-bug.t.cpp  031-validate-include-graph.t.cpp  (+15 more)
t/data/002-includegraph-just-includes/: a.h  b.h  c.h  foo.cpp
t/data/003-includegraph-function-ref/: a.h  foo.cpp
t/data/004-variablerefs-basic/: bar.h  foo.cpp
t/data/005-membermethoddecls-basic/: foo.cpp
t/data/006-gather-non-const-values/: foo.cpp
t/data/007-defs/: two_classes_with_inline_member_funcs.cpp
t/data/007-find-calls/: foo.cpp
t/data/008-definitions-two-funcs/: two-funcs.cpp
t/data/009-definitions-one-func-in-namespace/: one-func-in-namespace.cpp
t/data/009-definitions-two-class-defs-with-funcs/: two-class-defs-with-funcs.cpp
t/data/009-defs-two-class-defs-with-funcs/: two-class-defs-with-funcs.cpp
t/data/010-definitions-two-class-defs-with-funcs/: two-class-defs-with-funcs.cpp
t/data/011-definitions-templates/: templates.cpp
t/data/012-references-non-template/: non-template.cpp
t/data/013-references-template/: template.cpp
t/data/015-basic-cstring-propagation/: main.c
t/data/016-branching-cstring-propagation/: main.c
t/data/017-looping-cstring-propagation/: main.c
t/data/018-multi-function-cstring-propagation/: main.c
t/data/019-basic-integer-propagation/: main.c
t/data/019-files/: bar.cpp  foo.cpp
t/data/020-function-args-integer-propagation/: main.cpp
t/data/021-branching-integer-propagation/: main.c
t/data/022-looping-integer-propagation/: main.c
t/data/023-multi-function-integer-propagation/: main.c
t/data/024-find-cxx-member-calls/: foo.cpp
t/data/025-find-mixed-calls/: foo.cpp
t/data/026-macro-propagation/: a.h  foo.cpp
t/data/027-c-style-variadic-integer-propagation/: main.cpp
t/data/028-diagnostic-during-postprocessing/: test.cpp
t/data/029-tool-application-support/: compile_commands.json  warnings.cpp  warnings.h
t/data/030-cstring-propagation-bug/: main.cpp
t/data/031-validate-include-graph/: a.h  b.h  c.h  d.h  def1.h  def2.h  def3.h  def4.h  def5.h  def6.h  def7.h  diam.h  e.h  f.h  foo.cpp  g.h  level.h  mid.h
t/data/032-find-functions/: functions.cpp  includes_and_macros.h
t/data/033-detect-partial-macro-expansion/: not-partial-macro-usages.cpp  partial-macro-usages.cpp
t/data/034-macro-name-for-statement/: foo.cpp
t/data/035-range-for-statement/: foo.cpp
t/data/036-export-fixes-output/: functions.cpp
t/data/037-includegraph-dependency-check/: test_class.h  test_class_2.h  test_class_3.h  tester.cpp
t/data/038-includegraph-nested-name/: foo.cpp  foo.h
t/data/039-includegraph-nested-name-parameter/: foo.cpp
t/data/040-includegraph-nested-using/: a.h  b.h  foo.cpp
t/data/041-expand-range-if-valid/: foo.cpp
t/include/: clangmetatool-testconfig.h.in
(+157 files in other folders)
